# nutrition-web-scraper

./: .gitignore  README.md  pyproject.toml
data/: food_data.csv
data/fndds-fda/: cleaned_food_servings_fndds.csv  food_ingredients_fndds.csv  food_servings_fndds.csv
data/hpb/: food_names_hpb.txt
results/foods/: food_categories_hpb.csv  food_nutrients_hpb.csv
results/ingredients/: ingredient_nutrients_fndds.csv  ingredient_nutrients_hpb.csv
results/recipes/: recipes_fndds.csv
src/: get_ingredient_nutrients_fndds.py  get_ingredient_nutrients_hpb.py  scrape_food_category_hpb.py  scrape_food_names.py  scrape_food_names_hpb.py  scrape_ingredients.py  scrape_nutrition_info.py  scrape_nutrition_info_hpb.py
src/fndds-fda/: clean_food_servings.py  get_food_nutrients_fndds.py  get_ingredient_nutrients_fndds copy.py  get_ingredient_nutrients_fndds.py  parser_nutrition_fda.py
src/hpb/: get_ingredient_nutrients_hpb.py  scrape_food_category_hpb.py  scrape_food_names_hpb.py  scrape_nutrition_info_hpb.py
src/recipes/: get_food_ingredients.py  get_recipes_fndds.py
